--- a/html/general4js.html
+++ b/html/general4js.html
@@ -14,6 +14,9 @@
           campaign = requestCampaign;
           lastCampaignScenario = Math.floor(campaign.length / 3) - 1;
       }
+      if (window.location.search.indexOf("NOLOS") > -1) {
+          fovRange = 100;
+      }
       gmain(document.getElementById("general"));
     </script>
   </body>
